@@ -28,14 +28,12 @@ override_dh_link:
 			done; \
 		cd -; \
 	done
-	# use system copies of jquery and underscore instead.
-	for filename in `find $$DEBIANDIR -wholename '*/_static/jquery.js'`; do \
-		rm $$filename; \
-		ln -s /usr/share/javascript/jquery/jquery.js $$filename; \
-	done
-	for filename in `find $$DEBIANDIR -wholename '*/_static/underscore.js'`; do \
-		rm $$filename; \
-		ln -s /usr/share/javascript/underscore/underscore.js $$filename; \
+	# use system copies of javascript libraries instead
+	for jsname in jquery underscore doctools searchtools; do \
+		for filename in `find debian/ -wholename */_static/$$jsname.js`; do \
+			rm $$filename; \
+			ln -s /usr/share/javascript/sphinxdoc/1.0/$$jsname.js $$filename; \
+		done; \
 	done
 	dh_link
 
