@@ -3,6 +3,13 @@ ubuntu-packaging-guide (0.2.5) UNRELEASED; urgency=low
   [ Daniel Holbach ]
   * Added some additional information to the autopkgtest article.
 
+  [ Dmitry Shachnev ]
+  * Fix search not working (LP: #814679).
+  * Add CSS styling for code blocks and search results page.
+  * Link JS files with the libjs-sphinxdoc package.
+  * Fixed a typo in fixing-a-bug-example.rst.
+  * Simplified the syntax in python-packaging.rst.
+
  -- Daniel Holbach <daniel.holbach@ubuntu.com>  Fri, 12 Oct 2012 16:52:11 +0200
 
 ubuntu-packaging-guide (0.2.4) unstable; urgency=low
